@@ -1,25 +1,18 @@
 supersonic ball pc
 ==================
-christmas bugfixes (0.9.2)
+second christmas (0.9.2)
 
-made with löve by Julien "Juju" Savard-Gagnon
-
-http://juju2143.ca
-
+made with löve by Julien "Juju" Savard-Gagnon<br>
+http://juju2143.ca<br>
 http://love2d.org
 
 credits
 -------
-original idea: DJ Omnimaga
-
-music: DJ Omnimaga - Void (Square Wave Remix) by Juju
-
-graphics: DJ Omnimaga
-
-levels: DJ Omnimaga
-
-the rest: Juju
-
+original idea: DJ Omnimaga<br>
+music: DJ Omnimaga - Void (Square Wave Remix) by Juju<br>
+graphics: DJ Omnimaga<br>
+levels: DJ Omnimaga<br>
+the rest: Juju<br>
 contributors:
  - bb010g
 
@@ -37,8 +30,6 @@ goals
  - try not to get epilepsy (i warned you!)
  - good luck.
 
-(c) 2013 Omnimaga
-
-(c) 2013 Julosoft Studios
-
+(c) 2013 Omnimaga<br>
+(c) 2013 Julosoft Studios<br>
 http://julosoft.net/supersonicball/
